fixed div overlap issue with transcript and local media by using vh units for transcript height

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,6 +40,7 @@ input {
   background-color: #21252B;
   flex: 1;
   overflow: scroll;
+  height: 75vh;
 }
 
 #alerts {
